--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </header>
 
   <div class="produk">
-    <img src="https://via.placeholder.com/400x250.png?text=Gambar+Produk" alt="Produk">
+    <img src="https://i.imgur.com/yG6b6xB.png" alt="kaos putih">
     <h2>Kaos Polos Premium</h2>
     <p class="harga">Rp 45.000</p>
     <a class="pesan" href="https://wa.me/6281234567890" target="_blank">Pesan Sekarang</a>
