--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
   <div class="produk">
     <img src="https://i.imgur.com/yG6b6xB.png" alt="kaos putih">
-    <h2>Kaos Polos Premium</h2>
-    <p class="harga">Rp 45.000</p>
+    <h2>Kaos Putih Polos Premium</h2>
+    <p class="harga">Rp 95.000</p>
     <a class="pesan" href="https://wa.me/6281234567890" target="_blank">Pesan Sekarang</a>
   </div>
 
